# genetic_evolution

./: .gitignore  bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  crossover.rs  individual.rs  lib.rs  mutation.rs  selection.rs
libs/genetic-algorithm/src/crossover/: uniform.rs
libs/genetic-algorithm/src/mutation/: gaussian.rs
libs/genetic-algorithm/src/selection/: roulette_wheel.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  lib.rs  neuron.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: agent.rs  agent_individual.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs
www/: index.html  index.js  package-lock.json  package.json
